Ultra/Ultra.css
/* ... */
.children-3xh0VB:after {
    display: none;
}

.auto-2K3UW5::-webkit-scrollbar-thumb {
    display: block;
}

.container-ZMc96U {
    background: #101014 !important;
}

.container-YkUktl,
.container-6sXIoE {
    background-color: var(--background-secondary);
}

.container-6sXIoE {
    border: none;
}

.scroller-1d5FgU::-webkit-scrollbar {
    display: none;
}

.scroller-kQBbkU {
    margin-right: 30px !important;
}

.textScroller-dc9_kz {
    color: var(--text-normal);
}

.arrow-2HswgU {
    display: none;
}

.userPopout-29jUdN rect.pointerEvents-9SZWKj {
    x: 66 !important;
    y: 66 !important;
    height: 15px;
    width: 15px;
}

.layer-1Ixpg3 rect.pointerEvents-9SZWKj {
    x: 120 !important;
    y: 100 !important;
    height: 15px;
    width: 15px;
}

.scroller-1bVxF5 {
    padding: 6px 8px !important;
}

.bf-toolbar::before,
.contentWarningPopout-WKdbDG {
    background: var(--background-floating) !important;
}

.axolotlcord .homeIcon-r0w4ny path {
    fill: transparent;
}

.axolotlcord .homeIcon-r0w4ny {
    background: url("https://i.imgur.com/tfg5teR.png") center/cover no-repeat;
    min-width: 45px;
    min-height: 45px;
}

.card-14SgW5 {
    background: #101014 !important;
}

.theme-dark.navRow-dG-XX8 {
    background: #17161b !important;
}

.divider-vv_iHh {
    border-bottom: 1px solid transparent !important;
}

.roleContainer-WStCpt {
    background: transparent !important;
}

.callContainer-BGIngG .content-2a4AW9 {
    background-color: transparent !important;
}

#MemberCount,
#MemberCount .membersGroup-2eiWxl {
    background-color: var(--background-primary) !important;
}

.header-2Kx1US.ChannelDms-channelmembers-header.topPill-3DJJNV {
    background: var(--background-primary) !important;
}

